--- a/logbook/templates/layout.html
+++ b/logbook/templates/layout.html
@@ -14,8 +14,8 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
+            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="#">Add Log</a></li>
             <li role="presentation"><a href="#">Login</a></li>
           </ul>
         </nav>
@@ -37,10 +37,4 @@
 
     </div> <!-- /container -->
 
-
-
-
 {% endblock %}
-
-
-
