feat: add edit and delete button on index page. add cancel button on newlog and editlog page.

--- a/logbook/static/jumbotron.css
+++ b/logbook/static/jumbotron.css
@@ -31,6 +31,11 @@ body {
   background-color: #FF6600;
 }
 
+/* index page */
+a.edit {
+  margin-right: 5px
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
