--- a/logbook/templates/layout.html
+++ b/logbook/templates/layout.html
@@ -15,7 +15,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="/">Home</a></li>
-            <li role="presentation"><a href="#">Add Log</a></li>
+            <li role="presentation"><a href="{{url_for('log.new_log')}}">Add Log</a></li>
             <li role="presentation"><a href="#">Login</a></li>
           </ul>
         </nav>
