--- a/logbook/templates/layout.html
+++ b/logbook/templates/layout.html
@@ -15,8 +15,13 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="/">Home</a></li>
+
+            {% if current_user.is_authenticated() %}
             <li role="presentation"><a href="{{url_for('log.new_log')}}">Add Log</a></li>
-            <li role="presentation"><a href="#">Login</a></li>
+            <li role="presentation"><a href="{{url_for('log.logout')}}">Logout</a></li>
+            {% else %}
+            <li role="presentation"><a href="{{url_for('log.login')}}">Login</a></li>
+            {% endif %}
           </ul>
         </nav>
         <h3 class="text-muted">My Logbook</h3>
