feat: add login and logout using Flask-Login, protect forms with Flask-WTF
- show logs by users
- log creation, delete and edit requires login

--- a/logbook/static/jumbotron.css
+++ b/logbook/static/jumbotron.css
@@ -74,7 +74,7 @@ a.edit {
 
 /* Supporting marketing content */
 .marketing {
-  margin: 40px 0;
+  margin: 20px 0 40px 0;
 }
 .marketing p + h4 {
   margin-top: 28px;
