--- a/logbook/templates/auth/login.html
+++ b/logbook/templates/auth/login.html
@@ -3,24 +3,14 @@
 {% block main %}
 {% from "formhelpers.html" import render_field %}
 <h1>Login form</h1>
-<form class="form-horizontal" action="{{url_for('log.login')}}" method=post>
+<form class="form-horizontal" action="{{url_for('auth.login')}}" method=post>
    
     {{ form.csrf_token }}
-    {{ render_field(form.username) }}
     {{ render_field(form.email) }}
-    
-
-    <!--
-    {{ form.csrf_token }}
-    {{ form.username.label }}
-    {{ form.username(size=30)}}
-
-    {{ form.email.label }}
-    {{ form.email(size=30) }}
-    -->
+    {{ render_field(form.password) }}
 
     <div class="form-group">
-        <div class="col-sm-offset-4 col-sm-3">
+        <div class="col-sm-offset-10 col-sm-2">
             <input class="btn btn-primary" type="submit" value="Submit">
         </div>
     </div>
