--- a/logbook/templates/formhelpers.html
+++ b/logbook/templates/formhelpers.html
@@ -1,11 +1,26 @@
 {% macro render_field(field) %}
+
+{% if field.type == 'CSRFTokenField' %}
+    {{ field }}
+
+    {% if field.errors %}
+        <div class="warning">You have submitted an invalid CSRF token</div>
+    {% endif %}
+{% elif field.type == 'HiddenField' %}
+    {{ field }}
+{% else %}
     <div class="form-group">
-        <div class="col-sm-2">
-            {{ field.label }}
-        </div>
+        <label for="{{ field.label.field_id }}" class="col-sm-2 control-label">{{ field.label.text }}</label>
         <div class="col-sm-10">
-            {{ field(**kwargs)|safe }}
+            {{ field(placeholder=field.description,class_="form-control") }}
+            {% if field.errors %}
+                <div class="alert alert-danger" role="alert">
+                {% for err in field.errors %}
+                    <p>{{ err|e }}</p>
+                {% endfor %}
+                </div>
+            {% endif %}
         </div>
     </div>
-
+{% endif %}
 {% endmacro %}
