--- a/logbook/templates/layout.html
+++ b/logbook/templates/layout.html
@@ -14,21 +14,45 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/">Home</a></li>
 
             {% if current_user.is_authenticated() %}
             <li role="presentation"><a href="{{url_for('log.new_log')}}">Add Log</a></li>
-            <li role="presentation"><a href="{{url_for('log.logout')}}">Logout</a></li>
+            <li role="presentation"><a href="{{url_for('auth.logout')}}">Logout</a></li>
             {% else %}
-            <li role="presentation"><a href="{{url_for('log.login')}}">Login</a></li>
+            <li role="presentation"><a href="{{url_for('auth.register')}}">Sign up</a></li>
+            <li role="presentation"><a href="{{url_for('auth.login')}}">Login</a></li>
             {% endif %}
           </ul>
         </nav>
         <h3 class="text-muted">My Logbook</h3>
       </div>
 
+      
+        <div class="container">
+          {% with messages = get_flashed_messages() %}
+          {% if messages %}
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="flash">        
+                    <ul>
+                        {% for message in messages %}
+                            <li> <strong> {{ message }} </strong> </li>
+                        {% endfor %}
+                    </ul>
+              </div>
+            </div>
+          </div>
+          {% endif %}
+          {% endwith %}
+          
       {% block main %}
+
       {% endblock %}
+          
+        </div>
+
 
 
       <footer class="footer">
