--- a/logbook/static/jumbotron.css
+++ b/logbook/static/jumbotron.css
@@ -18,10 +18,14 @@ body {
   border-bottom: 1px solid #e5e5e5;
 }
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
+.header h3{
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
+  
+}
+
+.header h3 a{
   color: #FF6600;
 }
 
