--- a/logbook/templates/index.html
+++ b/logbook/templates/index.html
@@ -3,36 +3,37 @@
 
 {% block main %}
 
-    {% for l in logs %}
-    <div class="row marketing">
-        
-        <div class="col-md-2">
-            <b>{{l.create_date.strftime('%Y-%m-%d %H:%M')}}</b>
-        </div>
-        <div class="col-md-10">
-            <b>{{l.subject}}</b>
-            <br />
-            <small><a href="{{l.link}}">{{l.link}}</a></small>
-            <br />
-            <p>{{l.notes}}</p>
-            <small class="tag">
-            {% for t in l.tag %}
-                <a href="{{url_for('log.show_tag',tagname=t.name)}}">{{t.name}}</a> 
-            {% endfor %}
-            
-            {% if current_user.is_authenticated() %}
-            <a class="btn btn-default btn-xs pull-right delete"
-            href="{{url_for('log.delete_log', log_id=l.id)}}">Delete</a>
-            <a class="btn btn-default btn-xs pull-right edit" 
-            href="{{url_for('log.edit_log', log_id=l.id)}}">Edit</a>
-            {% endif %}
+  
+      <div class="jumbotron">
+        <h1>Jumbotron heading</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="{{url_for('auth.register')}}" role="button">Sign up today</a></p>
+      </div>
 
-            </small>
+      <div class="row marketing">
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
-    </div>    
-    {% endfor %}
-    <!--div class ="row marketing">
-        <a class="btn btn-primary pull-right" href="{{url_for('log.new_log')}}">Add Log</a>
-    </div-->
+
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+
+
 
 {% endblock %}
