feat: add login remember me feature

--- a/logbook/templates/auth/login.html
+++ b/logbook/templates/auth/login.html
@@ -8,6 +8,7 @@
     {{ form.csrf_token }}
     {{ render_field(form.email) }}
     {{ render_field(form.password) }}
+    {{ render_field(form.remember_me)}}
 
     <div class="form-group">
         <div class="col-sm-offset-10 col-sm-2">
