feat: add forgot password feature

--- a/logbook/templates/auth/forgot_password.html
+++ b/logbook/templates/auth/forgot_password.html
@@ -3,17 +3,14 @@
 {% block main %}
 {% from "formhelpers.html" import render_field %}
 <h1>Login form</h1>
-<form class="form-horizontal" action="{{url_for('auth.login')}}" method=post>
+<form class="form-horizontal" action="{{url_for('auth.forgot_password')}}" method=post>
    
     {{ form.csrf_token }}
     {{ render_field(form.email) }}
-    {{ render_field(form.password) }}
-    {{ render_field(form.remember_me)}}
+
 
     <div class="form-group">
-        <div class="col-sm-3">
-            <a href="{{url_for('auth.forgot_password')}}">Forgot password</a>
-        </div>
+
 
         <div class="col-sm-offset-10 col-sm-2">
             <input class="btn btn-primary" type="submit" value="Submit">
