feat: change dummy text to marketing text on front page

--- a/logbook/templates/index.html
+++ b/logbook/templates/index.html
@@ -2,35 +2,30 @@
 
 
 {% block main %}
-
-  
+ 
       <div class="jumbotron">
-        <h1>Jumbotron heading</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h1>Online logbook</h1>
+        <p class="lead">Get every thoughts, reading notes, links recorded. Simple and beautiful. Just what you need.</p>
         <p><a class="btn btn-lg btn-success" href="{{url_for('auth.register')}}" role="button">Sign up today</a></p>
       </div>
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Freewriting and journaling</h4>
+          <p>Logs are shown by date, giving you a clear picture when the logs are recorded. Suitable for freewriting and journaling everyday!</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>Sign up by email</h4>
+          <p>Provide your email and password and you are good to go.</p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
 
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Stay focused</h4>
+          <p>Simple interface puts focus back to your words. Blank ink on white screen is the best friend for writers.</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>Write anywhere, anytime</h4>
+          <p>Keep a My Logbook in my computer, smartpone, tablet. Always carry them with you.</p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
       </div>
 
